fixed issue with scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -6,7 +6,10 @@ body {
 
 .site-wraper {
   overflow-x: hidden;
+  position: relative;
 }
+
+
 
 h1, h2, h4{
   font-family: 'Lato', sans-serif;
